Adding draft items in "5 Things" section, all by Leo/Llama 3.1

--- a/2025/2025-04-20-wir.md
+++ b/2025/2025-04-20-wir.md
@@ -1,3 +1,13 @@
+<!--
+
+ Adding some draft items for the "Five Things" section below. All drafted entirely by Leo/Llama 3.1 following this prompt:
+
+Leo, I'm thinking of using the news article in this tab in my upcoming newsletter, which contains a bulleted list summarizing important tech news each week. Could you please summarize the story in 2-3 sentences?
+
+ Will run draft items through NotebookLM for re-write later, then do a final check myself.
+
+ -->
+
 # Yes, this is a market crash. Duh.
 ## tktk <!-- Get AI help drafting subhead. -->
 
@@ -38,17 +48,37 @@ The week's most important headlines in emerging tech:
 
 <!-- All drafts by Leo/Llama 3.1 for now. Will get NotebookLM to do an edit, then a final one of my own. NOTE: Drafts so far need A LOT of checking for accuracy, flow, etc. -->
 
-- WSJ musk story <!-- Link TK -->
 
-- https://www.washingtonpost.com/technology/2025/04/17/llm-poisoning-grooming-chatbots-russia/
+- **Elon Musk's Reproductive Plans** Elon Musk has a large family, with at least 14 children from four women, and is reportedly seeking to recruit more mothers to have his children. According to sources, Musk uses nondisclosure clauses and financial incentives to maintain secrecy and control over the mothers and their children. His motivations for having many children include concerns about a declining population and a desire to create a "legion" of intelligent humans to ensure the survival of humanity. ([Wall Street Journal](https://www.wsj.com/politics/elon-musk-children-mothers-ashley-st-clair-grimes-dc7ba05c?st=QFR3UL&reflink=desktopwebshare_permalink))
 
-- OpenAI changing safety policy again, doesn't seem to care about disinfo. https://fortune.com/2025/04/16/openai-safety-framework-manipulation-deception-critical-risk/
+- Researchers have found that a Russian disinformation network, known as the Pravda network, is manipulating Western AI chatbots to spread pro-Kremlin propaganda. The study found that 10 leading AI chatbots repeated falsehoods from the Pravda network more than 33% of the time, advancing a pro-Moscow agenda. This "LLM grooming" tactic poses a threat to democratic discourse worldwide and could become more pervasive in the absence of oversight. ([AFP](https://www.france24.com/en/live-news/20250310-russian-disinformation-infects-ai-chatbots-researchers-warn))
 
+- **OpenAI Policy Changes Spark Concerns**
+OpenAI has updated its AI safety policy, dropping pre-release testing requirements for persuasive or manipulative capabilities and considering the release of high-risk models. This decision has sparked concerns among experts, who fear it may lead to a "race to the bottom" in AI safety. The updated policy focuses on addressing risks through terms of service and user monitoring, rather than pre-deployment testing. ([Fortune](https://fortune.com/2025/04/16/openai-safety-framework-manipulation-deception-critical-risk/))
 
+- **Google Faces Antitrust Ruling**: A U.S. district judge ruled that Google's dominance in ad exchanges and server markets violates the Sherman Antitrust Act, harming advertisers and consumers. The company plans to appeal the decision. The ruling is part of a larger trend of antitrust cases against major tech companies, including Facebook and Amazon. ([Wall Street Journal](https://www.wsj.com/business/media/judge-rules-google-operates-illegal-ad-monopoly-1d955ed4?st=toZKpR&reflink=desktopwebshare_permalink))
 
+- **Public Companies' Bitcoin Holdings** Several major public companies, including MicroStrategy (now rebranded as Strategy), Tesla, and Coinbase, have invested heavily in Bitcoin, with Strategy holding the largest portfolio at 531,644 BTC (worth over $45 billion). These companies have joined the growing list of institutional investors buying into Bitcoin, with Strategy's co-founder Michael Saylor being a key figure in promoting its adoption. This trend indicates a significant shift in the way public companies view Bitcoin as a store of value. ([Decrypt](https://decrypt.co/47061/public-companies-biggest-bitcoin-portfolios))
 
+- **DOJ Memo Shifts Crypto Enforcement Approach.** A recent U.S. Justice Department memo signals a significant policy change, moving away from the Biden administration's more aggressive prosecutorial strategy and adopting a more favorable stance toward the crypto industry. The memo declares that the DOJ will focus on cases involving harm to investors or crypto-related crimes, rather than pursuing regulatory frameworks on digital assets. This shift could impact ongoing crypto cases and enforcement efforts, with some experts predicting a reduction in prosecutions. ([The Block](https://www.theblock.co/post/351111/sweeping-doj-memo-signals-turning-point-and-possible-relief-for-embattled-crypto-firms))
 
+- **Stellar Blockchain Expansion.** The Stellar blockchain aims to hold $3 billion in real-world asset (RWA) value and power $110 billion in RWA volume by the end of 2025. This goal is part of new partnerships with companies like Paxos, Ondo, Etherfuse, and SG Forge, which will help facilitate tokenization of existing financial assets. This expansion is a significant increase from the $290 million in RWA on the Stellar network at the end of December 2024. ([CoinDesk](https://www.coindesk.com/business/2025/04/17/stellar-sees-usd3b-of-real-world-assets-coming-on-chain-in-2025))
 
+- **Ripple Partners with HashKey Capital**: Ripple has backed the launch of the HashKey XRP Tracker Fund, a new investment fund in Asia designed to track the performance of XRP. The fund will be available to professional investors and allows for cash or in-kind subscription and monthly redemption of shares. This collaboration is seen as a push into the Asian market for Ripple and its XRP cryptocurrency. ([The Block](https://www.theblock.co/post/351224/ripple-backs-new-xrp-tracker-fund-by-hashkey-capital-signaling-institutional-push-in-asia))
+
+- **Google Search Volumes Increase for Bitcoin and Ethereum.** Google search volumes for "Bitcoin" and "Ethereum" have reached their highest levels in 2025, with Bitcoin's volume at 34 and Ethereum's at 19. This marks a significant increase in retail curiosity about these cryptocurrencies, particularly Bitcoin, which has seen a 26% month-over-month rise. The uptick in interest may be linked to the newly announced U.S. tariffs and rising geopolitical tension. ([The Block](https://www.theblock.co/post/351053/retail-curiosity-is-rekindled-as-google-search-volume-for-bitcoin-and-ethereum-jumps))
+
+- **Quantum Computing Threat to Bitcoin.** A $85,000 bounty has been offered by Project 11 to test if quantum computers can break Bitcoin's encryption. The challenge focuses on a simplified version of Bitcoin's elliptic curve cryptography, and experts warn that a quantum computer could potentially crack the encryption, allowing hackers to steal funds. This highlights the need for Bitcoin developers to prepare for a quantum future and develop new, quantum-resistant solutions to protect user funds. ([Decrypt](https://decrypt.co/315288/bitcoin-quantum-computing-bounty-encryption))
+
+- **Kraken Layoffs.** Kraken, a crypto exchange giant, has laid off hundreds of staff members across all areas of the business over the past several months. This move is part of the company's efforts to streamline operations and improve its earnings before interest, tax, and amortization (EBITA) ahead of a potential public listing in the U.S. Despite the layoffs, Kraken claims its business is thriving and continues to launch new products and drive revenue growth. ([CoinDesk](https://www.coindesk.com/business/2025/04/17/kraken-sheds-hundreds-of-jobs-to-streamline-business-ahead-of-ipo-sources-say))
+
+- **Martial Law Concerns:** President Donald Trump is approaching a deadline to report on whether to invoke the Insurrection Act and declare martial law. Trump has taken actions to subvert the military to meet this end, including installing a combative defense secretary and replacing the Joint Chiefs of Staff chairman. The article explores a hypothetical scenario where Trump declares martial law, leading to a chain of events that could result in the military arresting the president and suspending civil government. ([San Francisco Chronicle](https://www.sfchronicle.com/opinion/openforum/article/trump-insurrection-act-april-20-20269810.php))
+
+- **Coinbase Improves Solana Support** Coinbase has upgraded its infrastructure to better support the Solana ecosystem, addressing user complaints of withdrawal and depositing issues. The improvements include faster transaction processing times, improved liquidity, and better failsafes, resulting in a five-fold improvement in block processing throughput. This upgrade aims to meet the increasing demand for Solana transactions as the cryptocurrency scales in the future.([The Block](https://www.theblock.co/post/351197/coinbase-improves-solana-support-following-user-complaints-increases-transaction-throughput-five-fold))
+
+- **Bitcoin Mining Companies Struggle Amid Market Slump.** Stablecoin giant Tether has invested $32 million in Bitcoin miner Bitdeer, despite the sector facing challenges. Bitcoin miners have collectively lost 25% of their value in March, with many companies struggling to recover their costs due to soaring mining difficulty. Tether's investment in Bitdeer is part of its growing interest in the Bitcoin mining space. ([Decrypt](https://decrypt.co/315305/tether-buys-bitcoin-miner-bitdeer-stock))
+
+- **Arizona Advances Crypto Reserve Legislation.** Arizona's Strategic Digital Assets Reserve Bill (SB 1373) has passed the House committee, awaiting a full floor vote before reaching the governor's desk. The bill proposes creating a digital assets reserve fund, which would be filled with seized crypto and state appropriations. If enacted, it would be the first state to establish a digital assets reserve. ([The Block](https://www.theblock.co/post/351240/arizona-leads-crypto-reserve-legislation-race-as-sb-1373-passes-house-committee))
 
 - The Q1 2025 crypto market analysis by CoinDesk Indices reveals a significant shift towards institutional-driven capital flows, with institutions favoring liquid and regulated large-cap assets. This shift has led to a widening gap between Bitcoin and the rest of the market, with Bitcoin's dominance reaching 62.2% in Q1. Altcoins, on the other hand, have underperformed, with some experiencing significant declines. ([CoinDesk](https://www.coindesk.com/coindesk-indices/2025/04/16/bitcoin-leads-a-fundamental-shift-in-the-crypto-market))
 
