--- a/2025/2025-04-20-wir.md
+++ b/2025/2025-04-20-wir.md
@@ -1,10 +1,16 @@
 <!--
 
- Adding some draft items for the "Five Things" section below. All drafted entirely by Leo/Llama 3.1 following this prompt:
+For this version, I had NotebookLM and Copilot take a crack at rewriting the news summary items in the "Five Things" section that Leo/Llama 3.1 drafted earlier.
 
-Leo, I'm thinking of using the news article in this tab in my upcoming newsletter, which contains a bulleted list summarizing important tech news each week. Could you please summarize the story in 2-3 sentences?
+Didn't really find 9 of the 10 NotebookLM results useful in this case tbh. But it did surface the LiveWire article on quantum computing that I've now added to the summaries.
 
- Will run draft items through NotebookLM for re-write later, then do a final check myself.
+For the entire cohort of summary items, I found Copilot did a better rewrite job based on this prompt:
+
+Copilot, the attached markdown file is a draft of my weekly weekly newsletter about emerging technolgies. In the "Five Things" section are some news summary items I had another AI draft for me. Could you please edit them for clarity, spelling, grammar, flow, and, where possible based on your training data, factual accuracy? Each item should be 1-3 sentences in length.
+
+Copilot's revised summary items are copied below verbatim in the "Five Things" section. I've also preserved the Leo versions, commented out, for the sake of preserving the links better.
+
+Will manually edit myself from here in the next commit. - PM
 
  -->
 
@@ -42,12 +48,39 @@ Leo, I'm thinking of using the news article in this tab in my upcoming newslette
 
 <!-- Insert affiliate blurb -->
 
+
 ### Five Things: April 13-19, 2025
 
 The week's most important headlines in emerging tech:
 
-<!-- All drafts by Leo/Llama 3.1 for now. Will get NotebookLM to do an edit, then a final one of my own. NOTE: Drafts so far need A LOT of checking for accuracy, flow, etc. -->
+- **Elon Musk's Expanding Family Plans**: Elon Musk, already a father to at least 14 children from four women, is reportedly seeking additional mothers to grow his family. Sources claim this aligns with his belief in the importance of population growth.
 
+- **Russian Disinformation Targets Western AI**: Researchers have uncovered a Russian disinformation network, dubbed "Pravda," that manipulates Western AI chatbots to disseminate pro-Kremlin propaganda. The study highlights vulnerabilities in leading AI systems.
+
+- **OpenAI Sparks Controversy with Policy Updates**: OpenAI has revised its AI safety policy by removing pre-release testing requirements for certain high-risk capabilities. Critics worry this could lead to the irresponsible deployment of manipulative AI models.
+
+- **Google Faces Antitrust Scrutiny**: A U.S. district judge has ruled that Google's dominance in ad exchanges and server markets violates the Sherman Antitrust Act. This decision underscores the company's alleged harm to advertisers and consumers.
+
+- **Public Companies Double Down on Bitcoin**: Major companies like MicroStrategy (now rebranded as Strategy), Tesla, and Coinbase continue to invest heavily in Bitcoin. Strategy alone holds over 150,000 BTC, maintaining its position as a leading corporate Bitcoin investor.
+
+- **DOJ Signals Shift in Crypto Enforcement**: A recent U.S. Justice Department memo indicates a shift away from aggressive crypto enforcement under the Biden administration. The memo suggests a more measured approach moving forward.
+
+- **Stellar Blockchain Targets Real-World Assets**: Stellar aims to hold $3 billion in real-world asset (RWA) value and facilitate $110 billion in RWA transaction volume by the end of 2025. The plan includes new partnerships and expanded use cases.
+
+- **Ripple Launches Asia-Focused XRP Fund**: Ripple has partnered with HashKey Capital to launch the HashKey XRP Tracker Fund, allowing Asian investors to track XRP's performance. The fund is expected to expand institutional adoption of Ripple's cryptocurrency.
+
+- **Bitcoin and Ethereum Gain Search Popularity**: Google search volumes for "Bitcoin" and "Ethereum" have surged to 2025 highs, reflecting growing public interest. Bitcoin searches reached a volume of 34, with Ethereum close behind.
+
+- **Quantum Computing Threatens Bitcoin Security**: Project 11 has offered an $85,000 bounty to test whether quantum computers can break Bitcoin's encryption. The challenge focuses on a simplified version of Bitcoin's cryptographic protocols.
+
+Let me know if you'd like further refinements or have additional sections you'd like me to review!
+
+
+
+<!-- Older drafts by Leo/Llama 3.1...
+
+- **Scientists Observe Elusive Quantum Phenomenon**
+Researchers have successfully observed a new quantum phase, called a superradiant phase transition (SRPT), which was first predicted over 50 years ago. This phenomenon, resulting from the coordinated fluctuation of two groups of quantum particles, could have significant implications for quantum computing, sensors, and communication technology. The discovery could lead to more stable and precise quantum measurements and computations. ([LiveScience](https://www.livescience.com/technology/computing/scientists-observe-new-quantum-phase-that-could-have-major-implications-for-quantum-computing))
 
 - **Elon Musk's Reproductive Plans** Elon Musk has a large family, with at least 14 children from four women, and is reportedly seeking to recruit more mothers to have his children. According to sources, Musk uses nondisclosure clauses and financial incentives to maintain secrecy and control over the mothers and their children. His motivations for having many children include concerns about a declining population and a desire to create a "legion" of intelligent humans to ensure the survival of humanity. ([Wall Street Journal](https://www.wsj.com/politics/elon-musk-children-mothers-ashley-st-clair-grimes-dc7ba05c?st=QFR3UL&reflink=desktopwebshare_permalink))
 
@@ -108,6 +141,8 @@ Coinbase is calling on Australian voters to support crypto reform in the upcomin
 - **Tech Stocks Rebound Amid AI Hype** The tech startup ecosystem is experiencing a surge in valuations, particularly in AI-related companies, with some startups reaching valuations of $10 billion or more despite not having launched a product yet. This trend is driven by massive investments from venture capital firms and partnerships with major tech companies like Google, Microsoft, and Nvidia. The AI sector is seen as a "bright spot" amid pressure on mega-caps and volatility in the market. ([CNBC](https://www.youtube.com/watch?v=b8RFUvr_tks))
 
 - **Stablecoin Market Growth Predicted** A research report by Standard Chartered predicts that the stablecoin market could grow to $2 trillion by the end of 2028, driven by the expected passage of the Genius Act in the U.S. This legislation would further legitimize the stablecoin industry, potentially leading to a 10-fold increase in stablecoin supply. The increased demand for dollar-denominated stablecoin reserves could support U.S. dollar hegemony. ([CoinDesk](https://www.coindesk.com/markets/2025/04/15/stablecoin-market-could-grow-to-usd2t-by-end-2028-standard-chartered))
+
+-->
 
 ### The Week Ahead
 
